--- a/week-1/basic-JS/popup-hello-1-2.html
+++ b/week-1/basic-JS/popup-hello-1-2.html
@@ -1,7 +1,7 @@
 alert("Hello");
 
 [1, 2].forEach(alert);
-<!--correct-->
+<!--correct, 3 popup boxes show containing "hello" "1" and "2"-->
 
 <!-- would be incorrect without the simicolon behind hello since javascript assumes the [...] is a continued statement like this... alert("Hello")[1, 2].forEach(alert); 
 -->
